[DM] Add hover status for physical paired device
If offline

Fixes: 193748222
Test: PairedDevicePanelTest
Change-Id: I57fc75645dd2bcceb3c673d9f9eb1042d42ab115

GitOrigin-RevId: 6aca117821e080bfc9d4c76325bd8bcb1ba8f660